[package]
name = "match3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
num = "0.4.0"
num-derive = "0.4.0"
num-traits = "0.2.15"
rand = "0.8.5"
simple-easing = "1.0.1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3
